--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": " tailwindcss -i ./src/styles/input.css -o ./src/output.css --watch && vite",
+    "dev": "vite",
+    "test": "vitest",
+    "tw-watch": "tailwindcss -i ./src/styles/input.css -o ./src/output.css --watch",
     "build": "tsc -b && vite build",
     "husky": "node ./node_modules/husky/bin.js",
     "lint": "eslint .",
@@ -25,21 +27,29 @@
     }
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "~5.62.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.462.0",
     "path": "~0.12.7",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-error-boundary": "~4.1.2",
-    "react-router-dom": "~6.28.0"
+    "react-router-dom": "~6.28.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@testing-library/dom": "^10.4.0",
     "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
+    "@types/react": "~18.2.19",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "dotenv": "^16.4.5",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.3",
@@ -56,6 +66,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.16.0",
     "vite": "^6.0.1",
-    "vite-tsconfig-paths": "^5.1.3"
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.6"
   }
 }
