--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,16 +8,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@app/*": ["src/app/*"],
-      "@assets/*": ["src/assets/*"],
-      "@components/*": ["src/components/*"],
-      "@config/*": ["src/config/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@lib/*": ["src/lib/*"],
-      "@types/*": ["src/types/*"],
-      "@utils/*": ["src/utils/*"],
-      "@routes": ["/src/app/routes/*"]
+      "@routes/*": ["./src/app/routes/*"]
     }
-  },
-  
+  }
 }
