--- a/components.json
+++ b/components.json
@@ -1,16 +1,21 @@
 {
-  "$schema": "https://shadcn-solid.com/schema.json",
+  "$schema": "https://ui.shadcn.com/schema.json",
+  "style": "new-york",
+  "rsc": false,
+  "tsx": true,
   "tailwind": {
-    "config": ".",
-    "css": {
-      "path": "src/styles",
-      "variable": true
-    },
-    "color": "zinc",
+    "config": "tailwind.config.js",
+    "css": "src/styles/input.css",
+    "baseColor": "zinc",
+    "cssVariables": true,
     "prefix": ""
   },
-  "alias": {
-    "component": "@/components",
-    "cn": "@/libs/cn"
-  }
+  "aliases": {
+    "components": "@/components",
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
+  },
+  "iconLibrary": "lucide"
 }
