--- a/package.json
+++ b/package.json
@@ -31,28 +31,28 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@nhost/react": "^3.8.0",
-    "@preact/signals-react": "^2.2.0",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@nhost/react": "~3.8.0",
+    "@preact/signals-react": "~2.2.0",
+    "@radix-ui/react-dialog": "~1.1.2",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-separator": "~1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-tooltip": "~1.1.4",
     "@tanstack/react-query": "~5.62.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.462.0",
+    "lucide-react": "^0.465.0",
     "path": "~0.12.7",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-error-boundary": "~4.1.2",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "~6.23.0",
-    "sharp": "^0.33.5",
-    "svgo": "^3.3.2",
+    "sharp": "~0.33.5",
+    "svgo": "~3.3.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-image-optimizer": "^1.1.8",
+    "vite-plugin-image-optimizer": "~1.1.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -60,6 +60,7 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.16.0",
+    "@preact/signals-react-transform": "^0.4.0",
     "@storybook/addon-essentials": "^8.4.6",
     "@storybook/addon-interactions": "^8.4.6",
     "@storybook/addon-onboarding": "^8.4.6",
