add: verify husky eslint works take 1

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "lint-staged": {
     "src/**/*.(ts|tsx|js|jsx)": [
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix"
     ]
   },
   "husky": {
