--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 *storybook.log
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
