--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "test:unit": "vitest --no-watch",
+    "test:unit:watch": "vitest --no-watch",
     "test:integration": "vitest",
+    "test:integration:watch": "vitest",
     "coverage": "vitest run --coverage",
-    "tw-watch": "tailwindcss -i ./src/styles/input.css -o ./src/output.css --watch",
+    "tw:watch": "tailwindcss -i ./src/styles/input.css -o ./src/output.css --watch",
     "build": "tsc -b && vite build",
+    "depcheck": "depcheck",
     "husky": "node ./node_modules/husky/bin.js",
     "lint": "eslint .",
     "prepare": "husky install",
@@ -18,9 +21,8 @@
     "build-storybook": "storybook build"
   },
   "lint-staged": {
-    "src/**/*.(ts|tsx|js|jsx)": [
-      "prettier --write",
-      "eslint --fix"
+    "src/**/*.(ts|tsx)": [
+      "prettier --write"
     ]
   },
   "husky": {
@@ -29,32 +31,34 @@
     }
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "~3.9.1",
     "@nhost/react": "~3.8.0",
     "@preact/signals-react": "~2.2.0",
     "@radix-ui/react-dialog": "~1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "~1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "~1.1.0",
     "@radix-ui/react-tooltip": "~1.1.4",
     "@tanstack/react-query": "~5.62.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.465.0",
+    "class-variance-authority": "~0.7.1",
+    "clsx": "~2.1.1",
+    "global": "^4.4.0",
+    "lucide-react": "~0.465.0",
     "path": "~0.12.7",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-error-boundary": "~4.1.2",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "~7.53.2",
     "react-router-dom": "~6.23.0",
     "sharp": "~0.33.5",
-    "zod": "^3.23.8"
+    "zod": "~3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.16.0",
+    "@playwright/test": "^1.49.0",
     "@preact/signals-react-transform": "^0.4.0",
     "@storybook/addon-essentials": "^8.4.6",
     "@storybook/addon-interactions": "^8.4.6",
@@ -87,6 +91,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.4.1",
     "storybook": "^8.4.6",
+    "svgo": "^3.3.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
