--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "lint-staged": {
     "src/**/*.(ts|tsx)": [
-      "biome check --write ."
+      "biome lint ."
     ]
   },
   "husky": {
