--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "storybook:build": "storybook build"
   },
   "lint-staged": {
-    "src/**/*.{ts|tsx}": [
+    "src/**/*.(ts|tsx)": [
       "biome lint ."
     ]
   },
