--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "~0.7.1",
     "clsx": "~2.1.1",
+    "graphql-request": "^7.1.2",
     "lucide-react": "~0.465.0",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
