--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@hookform/resolvers": "~3.9.1",
     "@nhost/react": "~3.8.0",
     "@preact/signals-react": "~2.2.0",
-    "@radix-ui/react-dialog": "~1.1.2",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "~1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "~1.1.4",
     "@tanstack/react-query": "~5.62.0",
     "@tanstack/react-table": "^8.20.5",
