--- a/web/package.json
+++ b/web/package.json
@@ -58,6 +58,7 @@
     "react-router": "7.0.2",
     "react-toastify": "11.0.2",
     "sharp": "0.33.5",
+    "sqids": "^0.3.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
