--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-MONGODB_USER=root
-MONGODB_PASSWORD=123456
-MONGODB_DATABASE=brewers_diary
-MONGODB_LOCAL_PORT=7017
-MONGODB_DOCKER_PORT=27017
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_LOCAL_PORT=
+POSTGRES_DOCKER_PORT=
 
-SPRING_LOCAL_PORT=6868
-SPRING_DOCKER_PORT=8080
-SPRING_ENV=dev
+SPRING_LOCAL_PORT=
+SPRING_DOCKER_PORT=
+SPRING_DATASOURCE_URL=
+SPRING_DATASOURCE_USERNAME=
+SPRING_DATASOURCE_PASSWORD=
+SPRING_JPA_HIBERNATE_DDL_AUTO=
