--- a/app/pom.xml
+++ b/app/pom.xml
@@ -58,6 +58,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>brewers-diary</finalName>
 	</build>
 
 </project>
