--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,10 @@ services:
       - SECURITY_JWT_EXPIRATION=1800000
       - SPRING_SECURITY_USER_NAME=$SPRING_SECURITY_USER_NAME
       - SPRING_SECURITY_USER_PASSWORD=$SPRING_SECURITY_USER_PASSWORD
+    volumes:
+      - ./db/app:/workspace/app
     stdin_open: true
     tty: true
 networks:
   db:
     driver: bridge
-
-volumes:
-  db:
