--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ SPRING_DATASOURCE_URL=
 SPRING_DATASOURCE_USERNAME=
 SPRING_DATASOURCE_PASSWORD=
 SPRING_JPA_HIBERNATE_DDL_AUTO=
+SECURITY_JWT_SECRET=
+SPRING_SECURITY_USER_NAME=
+SPRING_SECURITY_USER_PASSWORD=
