--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,7 @@
     "husky": "node ./node_modules/husky/bin.js",
     "lint": "biome check src",
     "format": "biome check --write src",
-    "prepare": "husky install",
+    "prepare": "cd .. && husky install",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
@@ -77,7 +77,7 @@
     "@storybook/test": "^8.4.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.12.0",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
